bk_ida/gobmkida/c2/get_last_opponent_move
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/get_last_opponent_move/src/engine/board.c:1465:6: error: use of undeclared identifier 'dword_9B3C1C'
if ( dword_9B3C1C[v2] == 3 - color ) 
     ^
1 error generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/get_last_opponent_move/src/obj/1/board.o] Error 1
